Multi-label classification implementation